# better-office

./: CLAUDE.md  README.md
Workspace-Bench/docs/: dataset.md  evaluation.md  index.md  quickstart.md  visualization.md
Workspace-Bench/docs/stylesheets/: extra.css
Workspace-Bench/evaluation/baselines/: ClaudeCode.js
Workspace-Bench/evaluation/src/: agent_runner.py
deepagents/my_agent_demo/: experiment.toml  pyproject.toml
deepagents/my_agent_demo/my_agent/: __init__.py  graph.py  middleware.py  tools.py
deepagents/my_agent_demo/tests/: conftest.py
deepagents/my_agent_demo/tests/evals/: test_calculator.py  test_file_ops.py  test_weather.py
deepagents/workspace_bench_demo/: .env.example  .gitignore  PROJECT_REPORT.md  README.md  docker-compose.yaml  experiment.toml  run_baseline_multiple.py  run_iter003_verify.py  start.sh
deepagents/workspace_bench_demo/better_agent/: README.md
deepagents/workspace_bench_demo/judge_agent/: __init__.py  judge.py  judge_model.py  main.py
deepagents/workspace_bench_demo/runner_agent/: __init__.py  core.py  harness.py  main.py  prompt.txt  tools.py
deepagents/workspace_bench_demo/scripts/: BETTER_HARNESS_OPTIMIZATION_FLOW.md  TASK_116_RUBRIC_DATA_CONTRADICTION.md  better-harness&&workspace-bench流程.md  compare_rubrics.py  run_iter003_verify.py
deepagents/workspace_bench_demo/shared/: constants.py
deepagents/workspace_bench_demo/tests/: conftest.py
deepagents/workspace_bench_demo/workspace_bench_agent/: __init__.py  analysis.py  analyze_sales.py  conftest.py  graph.py  judge_model.py  judge_wrapper.py  pyproject.toml  (+1 more)
(+48 files in other folders)
