[project]
name = "my-agent-demo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "deepagents",
    "langchain-openai>=1.2.2",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["my_agent"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
test = [
    "pytest>=9.0.3",
    "better-harness @ file:///Users/zxc/deepagents/deepagents/examples/better-harness",
]
